osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_call_kwargs/test_allow_unexpected_respects_type[extra_arguments2].txt
error: argument `unexpected` to `ValidatingUnexpectedArgsUdf` has incompatible type
--> main.sml:1:60
     |
   1 | Ret = ValidatingUnexpectedArgsUdf(required='hi', unexpected=3.7)
     |                                                             ^ has type `float`, expected `str`
